This file documents the revision history for Perl extension Test-DBIx-Class.

0.42 13 Aug 2014
    - Fixed issue where a resultset isn't properly 'reset'
    - documentation improvements

0.41 21 Jan 2014
    - Change Moose load_class() (now deprecated) to Module::Runtime use_module()

0.40 30 May 2013
    - Add a dependency when using Postgresql so that Pg tests complete
      properly (felliott++)

0.39 15 April 2013
    - New Options to better control how SQLT is configured.  (mattp++)
    - don't forget to finish you taxes (USA only)

0.38 30 November 2012
    - New feature: You can now fail instead of skipping a test if the
      schema fails to initialize and connect. (colinnewell++)

0.37 07 November 2012
    - More typo fixes (oalders++)

0.36 06 November 2012
    - POD updates (oalders++)
    - updated contributors
    - don't forget to vote!

0.35 05 November 2012
    - ::Example::Schema::Result::Person's email column is now nullable as
      intended (abraxxa++)

0.34 05 July 2012
    - new configure option to let you specify a pre-existing $schema, rather
      than let Test::DBIx::Class build one for you.  Might be useful in sub
      tests or when you want to use it with a web framework. (bphillips++)

0.33 21 May 2012
    - fixed typo in Makefile.PL which Perl 5.16.0 is actually noticing

0.32 18 April 2012
    - Made drop statement configurable and made the Postgres trait do a
      drop ... cascade to ensure all tables are dropped cleanly. (colinnewell++)

0.31 12 March 2012
    - Documentation fixes (Volker++)

0.30 18 January 2012
    - New feature connect_opts that lets you customize DBIC connection options
    - Less noisy output during tests
    - documentation improvments
    - lecstor++

0.29 15 December 2011
    - New option to enable verbose debugging output.  Now, by default you
      should have more clean test output.  If you want the old, verbose test
      output set env TDBC_DEBUG=1 when running the tests. (lecstor++)
