@@ -465,7 +465,7 @@ on your storage engine (such as SQLite or MySQL) you will have other options.
     needs to be installed, but MySQL does not need to be running, nor do you need
     to create a test database or user.   The third one is the 
     [Test::DBIx::Class::SchemaManager::Trait::Testpostgresql](https://metacpan.org/pod/Test::DBIx::Class::SchemaManager::Trait::Testpostgresql) trait, which is
-    built on top of [Test::postgresql](https://metacpan.org/pod/Test::postgresql) and allows you to deploy to and run tests
+    built on top of [Test::PostgreSQL](https://metacpan.org/pod/Test::PostgreSQL) and allows you to deploy to and run tests
     against a temporary instance of Postgresql.  For this trait Postgresql
     and [DBD::Pg](https://metacpan.org/pod/DBD::Pg) needs to be installed, but Postgresql does not need to be
     running, nor do you need to create a test database or user.  
